feat: added dictionary creation from the .txt file

--- a/lstm-attention.ipynb
+++ b/lstm-attention.ipynb
@@ -2,6 +2,175 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import string\n",
+    "import random\n",
+    "import re\n",
+    "import unicodedata\n",
+    "from collections import Counter\n",
+    "from io import open\n",
+    "\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "from torch import optim\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Lang:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "        self.word2index = {}\n",
+    "        self.word2count = {}\n",
+    "        self.index2word = {0: 'SOS', 1: 'EOS'}\n",
+    "        self.n_words = 2\n",
+    "    \n",
+    "    def addSentence(self, sentence):\n",
+    "        for word in sentence.split(' '):\n",
+    "            self.addWord(word)\n",
+    "    \n",
+    "    def addWord(self, word):\n",
+    "        if word not in self.word2index:\n",
+    "            self.word2index[word] = self.n_words\n",
+    "            self.word2count[word] = 1\n",
+    "            self.index2word[self.n_words] = word\n",
+    "            self.n_words += 1\n",
+    "        else:\n",
+    "            self.word2count[word] += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def unicode_to_ascii(s):\n",
+    "    return ''.join(\n",
+    "        c for c in unicodedata.normalize('NFD', s) if unicodedata.category(c) != 'Mn'\n",
+    "    )\n",
+    "\n",
+    "def normalize_string(s):\n",
+    "    s = unicode_to_ascii(s.lower().strip()) # lowercase all characters and strip both ends\n",
+    "    s = re.sub(r\"([.!?])\", r\" \\1\", s) # remove special characters except ? and !\n",
+    "    s = re.sub(r\"[^a-zA-Z.!?]+\", r\" \", s)\n",
+    "    return s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'j ai pige ! ! ? '"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = \"             J'ai pigé ! 1234!@#%^*&(*(?))                  \"\n",
+    "normalize_string(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_file(lang1, lang2, reverse=False):\n",
+    "    print('Reading lines...')\n",
+    "    \n",
+    "    lines = open('./data/%s-%s.txt' % (lang1, lang2), encoding='utf-8').read().strip().split('\\n')\n",
+    "    pairs = [[normalize_string(s) for s in l.split('\\t')] for l in lines]\n",
+    "    \n",
+    "    # check for reverse\n",
+    "    if reverse:\n",
+    "        pairs = [list(reversed(p)) for p in pairs]\n",
+    "        original_lang = Lang(lang1)\n",
+    "        translated_lang = Lang(lang2)\n",
+    "    else:\n",
+    "        original_lang = Lang(lang2)\n",
+    "        translated_lang = Lang(lang1)\n",
+    "        \n",
+    "    return original_lang, translated_lang, pairs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MAX_LEN = 10\n",
+    "\n",
+    "eng_prefixes = ('i am', 'i m')\n",
+    "\n",
+    "def filter_pair(p):\n",
+    "    return (len(p[0].split(' ')) < MAX_LEN and len(p[1].split(' ')) < MAX_LEN and p[1].startswith(eng_prefixes))\n",
+    "\n",
+    "def filter_pairs(pairs):\n",
+    "    return [pair for pair in pairs if filter_pair(pair)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading lines...\n",
+      "Total number of pairs: 135842\n",
+      "Trimmed to 4534 number of pairs\n",
+      "Counting words...\n",
+      "eng 2405\n",
+      "fra 1792\n",
+      "['j ai ans .', 'i m .']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def prepare_data(lang1, lang2, reverse=False):\n",
+    "    original, translated, pairs = read_file(lang1, lang2, reverse)\n",
+    "    print('Total number of pairs:', len(pairs))\n",
+    "    pairs = filter_pairs(pairs)\n",
+    "    print('Trimmed to %s number of pairs' % len(pairs))\n",
+    "    print('Counting words...')\n",
+    "    for pair in pairs:\n",
+    "        original.addSentence(pair[0])\n",
+    "        translated.addSentence(pair[1])\n",
+    "    print(original.name, original.n_words)\n",
+    "    print(translated.name, translated.n_words)\n",
+    "    \n",
+    "    return original, translated, pairs\n",
+    "    \n",
+    "original, translated, pairs = prepare_data('eng', 'fra', reverse=True)\n",
+    "print(pairs[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
