feat: added encoder and decoder model

--- a/lstm-attention.ipynb
+++ b/lstm-attention.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
        "'j ai pige ! ! ? '"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -171,10 +171,111 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Encoder(nn.Module):\n",
+    "    def __init__(self, input_size, hidden_size):\n",
+    "        self.input_size = input_size\n",
+    "        self.hidden_size = hidden_size\n",
+    "        \n",
+    "        self.embed = nn.Embedding(self.input_size, self.hidden_size)\n",
+    "        self.gru = nn.GRU(self.hidden_size, self.hidden_size)\n",
+    "        \n",
+    "    def forward(self, x, h):\n",
+    "        embedding = self.embed(x)\n",
+    "        output, h = self.gru(embedding, h)\n",
+    "        \n",
+    "        return output, h\n",
+    "    \n",
+    "    def init_hidden_weights(self):\n",
+    "        return torch.zeros(1, 1, self.hidden_size, device=device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Decoder(nn.Module):\n",
+    "    def __init__(self, hidden_size, output_size):\n",
+    "        self.hidden_size = hidden_size\n",
+    "        self.output_size = output_size\n",
+    "        \n",
+    "        self.embed = nn.Embedding(self.output_size, self.hidden_size)\n",
+    "        self.gru = nn.GRU(self.hidden_size, self.hidden_size)\n",
+    "        self.fc = nn.Linear(self.hidden_size, self.output_size)\n",
+    "        self.softmax = nn.LogSoftmax(dim=1)\n",
+    "        \n",
+    "    def forward(self, x, h):\n",
+    "        out = F.relu(self.embed(x).view(1, 1, -1))\n",
+    "        out, h = self.gru(out, h)\n",
+    "        out = self.softmax(self.fc(out[0]))\n",
+    "    \n",
+    "    def init_hidden_weights(self):\n",
+    "        return torch.zeros(1, 1, self.hidden_size, device=device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# preparing training data\n",
+    "EOS_TOKEN=1\n",
+    "SOS_TOKEN=0\n",
+    "\n",
+    "def index_from_sentence(lang, sentence):\n",
+    "    return [lang.word2index[word] for word in sentence.split(' ')]\n",
+    "\n",
+    "def tensor_from_sentence(lang, sentence):\n",
+    "    idx = index_from_sentence(lang, sentence)\n",
+    "    idx.append(EOS_TOKEN)\n",
+    "    \n",
+    "    return torch.tensor(idx, type=torch.long, device=device).view(-1, 1)\n",
+    "\n",
+    "def tensor_from_pair(pair):\n",
+    "    feature = tensor_from_sentence(lang, pair[0])\n",
+    "    target = tensor_from_sentence(lang, pair[1])\n",
+    "    \n",
+    "    return (feature, target)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "force_teacher_ratio = 0.5\n",
+    "\n",
+    "def train(input_tensor, target_tensor, encoder, decoder, encoder_optimizer, decoder_optimizer, criterion, max_length=MAX_LEN):\n",
+    "    encoder_hidden = encoder.init_hidden_weights()\n",
+    "    \n",
+    "    encoder_optimizer.zero_grad()\n",
+    "    decoder_optimizer.zero_grad()\n",
+    "    \n",
+    "    input_length = input_tensor.size(0)\n",
+    "    output_length = target_tensor.size(0)\n",
+    "    \n",
+    "    encoder_outputs = torch.zeros(max_length, encoder.hidden_size, device=device)\n",
+    "    \n",
+    "    loss = 0\n",
+    "    for i in range(input_length):\n",
+    "        encoder_output, encoder_hidden = encoder(input_tensor[i], encoder_hidden)\n",
+    "        encoder_outputs[i] = encoder_output[0,0]\n",
+    "    \n",
+    "    decoder_input = torch.tensor([[SOS_TOKEN]], device=device)\n",
+    "    decoder_hidden = encoder_hidden\n",
+    "    \n",
+    "    use_teacher_forcing = True if random.random() < force_teacher_ratio else False\n",
+    "    if use_teacher_forcing:\n",
+    "        for i in range(target_length):\n",
+    "            "
+   ]
   }
  ],
  "metadata": {
